<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context=".ui.add.NoteFragment">


    <ImageView
        android:id="@+id/img_close"
        android:layout_width="30dp"
        android:layout_height="30dp"

        android:rotation="45"
        android:src="@drawable/ic_round_add_24"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:fontFamily="@font/abel"
        android:hint="@string/title"
        android:maxLines="1"
        android:padding="10dp"
        android:textColorHint="@color/yellowDark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_close" />


    <EditText

        android:id="@+id/desEdt"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_yellow_light"
        android:fontFamily="@font/abel"
        android:gravity="top"
        android:hint="@string/description"
        android:padding="10dp"
        android:textColorHint="@color/yellowDark"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contentsLayout"
        android:layout_width="0dp"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_rounded_gray_light"
        app:layout_constraintTop_toBottomOf="@id/desEdt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categoriesLayout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abel"
                android:text="@string/categories"
                android:textColor="@color/grayDark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:elevation="1dp"

                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Spinner
                    android:id="@+id/categoriesSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />


            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
app:layout_constraintTop_toBottomOf="@id/categoriesLayout"            android:id="@+id/priorityLayout">



            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:fontFamily="@font/abel"
                android:textStyle="bold"
                android:textColor="@color/grayDark"
                android:text="@string/priority"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <androidx.cardview.widget.CardView
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="5dp"
                app:cardBackgroundColor="@color/white"
                android:elevation="1dp"
                android:layout_margin="3dp"
                android:layout_width="150dp"
                android:layout_height="30dp">

                <Spinner
                    android:id="@+id/prioritySpinner"
                    android:layout_gravity="center_vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>







            </androidx.cardview.widget.CardView>





        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    
    
    
    <com.google.android.material.button.MaterialButton
android:id="@+id/saveNote"
        app:layout_constraintTop_toBottomOf="@id/contentsLayout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/save"
        app:cornerRadius="10dp"
        android:paddingHorizontal="50dp"
        android:fontFamily="@font/abel"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:backgroundTint="@color/green"
        android:layout_width="wrap_content"
        android:layout_height="55dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>


